# pubchem-api-crawler

./: .gitignore  .pre-commit-config.yaml  PubChem.ipynb  README.md  pyproject.toml
.github/workflows/: pre_publish.yml  test.yml
notebooks/: PropertiesExtraction.ipynb  PubChem.ipynb
pubchem_api_crawler/: __init__.py  annotations.py  config.py  constants.py  molecular_search.py  rest_api.py  utils.py
tests/: test_molecular_search.py  test_utils.py
