[tool.poetry]
name = "pubchem-api-crawler"
version = "0.1.0"
description = ""
authors = ["Jonas Renault <jonasrenault@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.2.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.11"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
